--- a/README
+++ b/README
@@ -1,8 +1,10 @@
 A collection of python scripts to parse TodoTxt files (thanks to @ginatrapani!) 
-based on the work of @jamietr.
+based on the work of @jamietr. Also uses Geeknote (thanks to @VitaliyRodnenko!)
 
 See also:
 https://github.com/jamietr1
 http://www.jamierubin.net/2012/08/23/my-new-paperless-to-do-list-management-system/comment-page-1/#comment-18977
 https://github.com/ginatrapani/todo.txt-cli
+http://www.geeknote.me/
+https://github.com/VitaliyRodnenko/geeknote
 
